Style - BookContainer: Style the bookContainer to be fixed and have a stylized scrollbar

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,11 +5,62 @@
   padding: 0;
 }
 
-.bookListContainer {
+/* .bookListContainer {
   padding-top: calc(var(--header-height) + var(--filters-height) + 32px);
   @media (max-width: 768px) {
     padding-top: calc(
       var(--header-height) + var(--mobile-filters-height) + 32px
     );
+  }
+} */
+
+.bookListContainer {
+  top: calc(var(--header-height) + var(--filters-height) + 15px);
+  position: fixed;
+  left: 0;
+  right: 0;
+  /* padding-bottom: calc(var(--header-height) + var(--filters-height)); */
+  height: calc(100vh - var(--header-height) - var(--filters-height));
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 12px; /* Width of vertical scrollbar */
+  }
+
+  /* Style the scrollbar track */
+  &::-webkit-scrollbar-track {
+    background: var(--light);
+    border-left: 3px solid var(--primary);
+    /* border-radius: 10px; */
+  }
+
+  /* Style the scrollbar thumb */
+  &::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    /* border-radius: 10px; */
+  }
+
+  /* Style the scrollbar thumb on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: var(--dark);
+  }
+  @media (max-width: 768px) {
+    top: calc(var(--header-height) + var(--mobile-filters-height) + 32px);
+  }
+}
+
+.bookListWrapper {
+  width: 100%;
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 16px 0;
+}
+
+[data-theme='dark'] .bookListContainer {
+  &::-webkit-scrollbar-thumb {
+    background: var(--primary);
+  }
+  &::-webkit-scrollbar-track {
+    background: var(--medium);
+    /* border-left: 2px solid var(--primary); */
   }
 }
